fix(article): summary truncating

--- a/dashboard/src/shared/ui/row-card/styles.module.scss
+++ b/dashboard/src/shared/ui/row-card/styles.module.scss
@@ -4,3 +4,8 @@
     // color: orange;
     color: lightslategrey;
 }
+
+.subtitle {
+    display: block;
+    opacity: 0.5;
+}
